# fountain

./: .gitignore  .travis.yml  Cargo.toml
benches/: decoder_benchmark.rs
src/: block.rs  decoder.rs  droplet.rs  encoder.rs  ideal_encoder.rs  ideal_soliton.rs  iterext.rs  lib.rs  ltcode.rs  robust_encoder.rs  robust_soliton.rs  soliton.rs  types.rs  xor.rs
tests/: comparison_enc_dec_prop_test.rs  dist_test.rs  ideal_enc_dec_prop_test.rs  ideal_sol_enc_dec_tests.rs  ltcodetests.rs  robust_enc_dec_prop_test.rs  robust_sol_enc_dec_tests.rs  soliton_test.rs
