[package]
name = "fountaincode"
version = "0.0.8"
authors = ["Christoph Doblander <chris@degree.at>"]
edition = "2018"

description = "Implementation of the Luby Transform Code in Rust"
homepage = "https://github.com/chrido/fountain"
repository = "https://github.com/chrido/fountain.git"
license = "MIT/Apache-2.0"
keywords = ["FEC", "ErrorCorrection", "FountainCode"]

[features]
# Enable NEON SIMD instructions on arm targets. Requires nightly
# compiler.
arm-neon = []

[profile.release]
debug = true

[dependencies]
rand = "0.7.3"

[dev-dependencies]
criterion = "0.3"
itertools = "0.9.0"
proptest = "0.10.0"
stopwatch = "0.0.7"

[[bench]]
name = "decoder_benchmark"
harness = false
